docs/.vuepress/theme/styles/custom/base/_type-and-content.scss
// 
// Typography
// 

// Headings

h1, h2, h3, h4, h5, h6 {
  font-family: $base-heading-font-family;
}

h1, h2, h3, h4 {
  font-weight: $fw-medium;
}

h5, h6 {
  font-weight: $fw-bold;
}

// Helper classes

.page-sub-title {
  font-size: 1.188rem;
  color: $gray-5;
  text-align: center;
  line-height: 1.688rem;
}

// Links

a {
  color: $color-5;

  &:hover {

  }

  &:active {

  }

  &:focus {

  }

  &:visited {

  }
}

// Code blocks

div[class*="language-"].line-numbers-mode pre {
  // small fix for an invalid style attribute on the core VuePress styles
  padding-left: 4.5rem;
}

div[class*="language-"] {
  background-color: $codeBgColor;
  color: #333;

  &::before {
    position: absolute;
    z-index: 3;
    top: .35em;
    right: .8em;
    font-size: 0.75rem;
    color: #888;
  }

  &.line-numbers-mode .line-numbers-wrapper {
    color: #333;
  }

  &.line-numbers-mode:after {
    background-color: transparent;
    border: 1px solid #ddd;
  }
}

#{$contentClass} code {
  font-size: inherit;
}

#{$contentClass} {
  pre,
  div[class*="language-"] {
    background-color: $codeBgColor;

    code {
      font-size: .9rem;
      line-height: 1.5;
      color: #333;
    }
  }
}

// shell label
div[class~="language-sh"]:before {
  content: "sh";
}

// yaml label
div[class~="language-yaml"]:before {
  content: "yaml";
}

// Images

img {
  max-width: 100%;
  height: auto;
}

